@@ -1,6 +1,13 @@
 2022-08-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/SDCC.y,
+	  .version,
+	  support/valdiag/tests/enum.c:
+	  C2X enum tag compatibility rules, RFE #852.
+
+2022-08-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCC.y,
 	  src/SDCCerr.c,
 	  src/SDCCerr.h,
 	  src/SDCCsymt.c,
